# lithanium

./: Cargo.toml  LICENSE  README.md
src/: args.rs  main.rs
src/lang/: mod.rs
src/lang/compiler/: expression.rs  lexer.rs  mod.rs  parser.rs  statement.rs  token.rs
src/lang/structure/: function.rs  let.rs  mod.rs  return.rs
src/lang/util/: error_logger.rs  mod.rs  vec.rs
tests/e2e/: 1.lit
