[package]
name = "lithanium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
clap = { version = "4.4.14", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
    
